changing MD algorithms names to be more standard complient